Bug 943041 - Don't delay compositing on the compositor thread in ASAP mode (layout.frame_rate == 0). r=BenWa